2002-12-20  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03588] include time.h in ftp.c
	* ftp.c: include <time.h>

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03583] w3mman
	* scripts/w3mman/README: W3MMAN_W3M, W3MMAN_MAN
	* scripts/w3mman/w3mman.1.in: add ENVIRONMENT
	* scripts/w3mman/w3mman.in: $ENV{'W3MMAN_W3M'}, $ENV{'W3MMAN_MAN'}
	* scripts/w3mman/w3mman2html.cgi.in: $ENV{'W3MMAN_MAN'}
					hyphenation

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03582] add config options graphic_char and use_proxy
	* NEWS: rc: graphic_char, use_proxy
	* fm.h (Do_no_use_proxy): macro using use_proxy
		(use_proxy): added
		(no_graphic_char): deleted
		(UseGraphicChar): added
	* main.c (main): UseGraphicChar, use_proxy
	* rc.c (CMT_GRAPHIC_CHAR): added
		(CMT_USE_PROXY): added
		(params1): graphic_char
		(params4): use_proxy
	* terms.c (graph_ok): UseGraphicChar

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03581] MARK_URL, MARK_WORD
	* main.c (chkWORD): accept ()[]{}&|;*?$ as anchor

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03580] Re: clean up displayBuffer()
	* main.c (main): force redraw

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03579] Re: clean up displayBuffer()
	* display.c (displayBuffer): re calcTabPos() when force or image redraw
	* main.c (_mark): force redraw
		(reinit): redraw image
	* search.c (backwardSearch): found_last

2002-12-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03584] Re: meta refresh
	* main.c (DefaultAlarm): fix initialize value

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03578] meta refresh
	* file.c (getMetaRefreshParam): do nothing if refresh_interval < 0
		(HTMLtagproc1): rewrite refresh
		(HTMLlineproc2body): add HTML_META
	* fm.h (BP_RELOAD): deleted
		(Buffer): add event
		(AL_IMPLICIT_DONE): deleted
		(AL_ONCE): deleted
		(AL_RESTORE): deleted
		(AlarmEvent): added